@@ -71,6 +71,7 @@ Open Mobile Alliance Lightweight Machine to Machine TLV payload Added (LwM2M TLV
 Metamako trailers
 ISO 8583-1
 Bluetooth Pseudoheader for BR/EDR
+Edge Control Protocol (ECP)
 
 // Items in --sort-and-group-- blocks will be sorted and comma-separated.
 --sort-and-group--
